--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,18 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>GIDClientID</key>
+	<string>490779696779-jlb6nntb2ds0flppe8m23918fec02006.apps.googleusercontent.com</string>	
+	<key>CFBundleURLTypes</key>
+<array>
+	<dict>
+		<key>CFBundleTypeRole</key>
+		<string>Editor</string>
+		<key>CFBundleURLSchemes</key>
+		<array>
+			<string>com.googleusercontent.apps.490779696779-jlb6nntb2ds0flppe8m23918fec02006</string>
+		</array>
+	</dict>
+</array>
 </dict>
 </plist>
